# threatflux-threat-detection

./: .clippy.toml  .commitlintrc.json  .dockerignore  .editorconfig  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .rustfmt.toml  .yamllint.yml  ANALYSIS_REPORT_SUMMARY.md  CHANGELOG.md  CI_CD_IMPROVEMENTS.md  CI_DISK_SPACE_FIX.md  CI_OPTIMIZATION_GUIDE.md  CI_STATUS_CHECK.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.wrong-cache-version  DATASET_QUALITY_ANALYSIS.md  DEPENDENCY_UPGRADES.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  Dockerfile  ENHANCED_FEATURES_GUIDE.md  ENHANCED_TRAINING_DATA_FEATURES.md  FILE_SCANNER_ARCHITECTURE_GUIDE.md  FILE_SCANNER_FEATURE_USAGE.md  FILE_SCANNER_FLOW_DIAGRAM.md  LIBRARY_OVERVIEW.md  MCP_REFACTORING_GUIDE.md  MCP_REFACTORING_SUMMARY.md  MCP_TESTING.md  MIGRATION_GUIDE.md  MULTIPROCESS_UPGRADE_SUMMARY.md  Makefile  NEW_DATA.md  NEXT_TASKS.md  PERFORMANCE_GUIDE.md  QUALITY_REVIEW.md  (+100 more)
.cargo/: audit.toml  config.toml
.github/: dependabot.yml  pull_request_template.md
benches/: hash_benchmark.rs  parser_benchmark.rs
complete_program_files_scan/: Steam_000e9c36a1a0f019199c61afb668440a5d4c3a4f_da39a3ee5e6b4b0d3255bfef95601890afd80709_20250601_212444.json  Steam_0010957c5e9bb7dcb59017846104855382ad13aa_da39a3ee5e6b4b0d3255bfef95601890afd80709_20250601_212444.json  Steam_00403d083225ae70147d71c16262a257692edabc_da39a3ee5e6b4b0d3255bfef95601890afd80709_20250601_212444.json  Steam_00756756c52199f4857e6450eb3825048e4b3c11_da39a3ee5e6b4b0d3255bfef95601890afd80709_20250601_212155.json  (+806 more)
docs/: API.md  ARCHITECTURE.md  FAQ.md  INSTALLATION.md  MCP.md  USAGE.md  (+2 more)
threatflux-binary-analysis/: API.md  CHANGELOG.md  Cargo.toml  Makefile  README.md
threatflux-binary-analysis/.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
threatflux-binary-analysis/.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
threatflux-binary-analysis/.github/workflows/: ci.yml  docs.yml  release.yml  security.yml
threatflux-binary-analysis/examples/: basic_analysis.rs  control_flow.rs  disassembly.rs  security_analysis.rs
threatflux-binary-analysis/src/: error.rs  lib.rs  types.rs
threatflux-binary-analysis/src/analysis/: control_flow.rs  entropy.rs  mod.rs  security.rs
threatflux-binary-analysis/src/disasm/: capstone_engine.rs  iced_engine.rs  mod.rs
threatflux-binary-analysis/src/formats/: elf.rs  macho.rs  mod.rs  pe.rs  raw.rs
threatflux-binary-analysis/src/utils/: extractor.rs  mmap.rs  mod.rs  patterns.rs
threatflux-binary-analysis/tests/: analyzer_test.rs  format_detection_test.rs  integration_test.rs  mod.rs  types_test.rs
threatflux-binary-analysis/tests/common/: fixtures.rs  helpers.rs  mod.rs
threatflux-cache/: Cargo.toml  Makefile  README.md
threatflux-cache/.github/workflows/: dependency-update.yml  docs.yml  release.yml
threatflux-cache/examples/: basic_usage.rs  custom_entry.rs  file_scanner_migration.rs  simple_test.rs
threatflux-cache/src/: cache.rs  config.rs  entry.rs  error.rs  eviction.rs  lib.rs  search.rs  storage.rs
threatflux-cache/src/backends/: filesystem.rs  memory.rs  mod.rs
threatflux-cache/tests/: cache_comprehensive_test.rs  integration_test.rs
threatflux-cache/tests/backends/: filesystem_backend_test.rs
threatflux-hashing/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MIGRATION.md  Makefile  README.md  SUMMARY.md  deny.toml
threatflux-hashing/.github/: pull_request_template.md
threatflux-hashing/.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
threatflux-hashing/.github/workflows/: ci.yml  docs.yml  release.yml
threatflux-hashing/benches/: hash_benchmarks.rs
threatflux-hashing/examples/: basic_usage.rs  concurrent_hashing.rs
threatflux-hashing/src/: error.rs  hasher.rs  lib.rs
threatflux-package-security/: Cargo.toml  Makefile  README.md
threatflux-package-security/.github/: CODEOWNERS  dependabot.yml
threatflux-package-security/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security_report.yml
threatflux-package-security/.github/PULL_REQUEST_TEMPLATE/: default.md  security_fix.md
threatflux-package-security/.github/workflows/: README.md  ci.yml  dependency-update.yml  docs.yml  release.yml  security.yml
threatflux-package-security/examples/: basic_usage.rs
threatflux-package-security/src/: lib.rs
threatflux-package-security/src/analyzers/: java.rs  mod.rs  npm.rs  python.rs
threatflux-package-security/src/core/: dependency.rs  mod.rs  package.rs  patterns.rs  risk.rs  vulnerability.rs
threatflux-package-security/src/utils/: mod.rs  pattern_matcher.rs  typosquatting.rs  version_parser.rs
threatflux-package-security/src/vulnerability_db/: java_db.rs  mod.rs  npm_db.rs  python_db.rs  updater.rs
threatflux-package-security/tests/: comprehensive_test.rs  integration_test.rs
threatflux-string-analysis/: Cargo.toml  INTEGRATION.md  Makefile  README.md
threatflux-string-analysis/.github/workflows/: ci.yml  docs.yml  release.yml  security.yml
threatflux-string-analysis/examples/: basic_usage.rs  custom_patterns.rs  security_log_analysis.rs
threatflux-string-analysis/src/: analyzer.rs  categorizer.rs  lib.rs  patterns.rs  tracker.rs  types.rs
threatflux-string-analysis/tests/: comprehensive_test.rs  integration_test.rs  unit_test.rs
threatflux-threat-detection/: Cargo.toml  Makefile  deny.toml
threatflux-threat-detection/.github/: CODEOWNERS  dependabot.yml
threatflux-threat-detection/.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  security_report.yml
threatflux-threat-detection/.github/PULL_REQUEST_TEMPLATE/: default.md  security_fix.md
threatflux-threat-detection/.github/workflows/: README.md  ci.yml  docs.yml  release.yml  security.yml
threatflux-threat-detection/src/: error.rs  lib.rs  types.rs
threatflux-threat-detection/src/analysis/: mod.rs
threatflux-threat-detection/src/engines/: clamav.rs  mod.rs  patterns.rs  yara.rs
threatflux-threat-detection/src/rules/: builtin.rs  mod.rs  updater.rs
threatflux-threat-detection/tests/: detector_test.rs  integration_test.rs  types_test.rs
(+7626 files in other folders)
