[package]
name = "threatflux-cache"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
authors = ["ThreatFlux"]
description = "A flexible async cache library for Rust with pluggable backends and serialization"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ThreatFlux/threatflux-cache"
keywords = ["cache", "async", "storage", "lru", "persistence"]
categories = ["caching", "asynchronous", "data-structures"]

[dependencies]
# Core dependencies
tokio = { version = "1.45", features = ["sync", "rt", "macros", "fs", "io-util"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"

# Optional dependencies
serde_json = { version = "1.0", optional = true }
bincode = { version = "1.3", optional = true }
flate2 = { version = "1.0", optional = true }
utoipa = { version = "5.3", optional = true }
tracing = { version = "0.1", optional = true }
prometheus = { version = "0.13", optional = true }

[dev-dependencies]
tokio = { version = "1.45", features = ["full"] }
tempfile = "3.16"
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1.7"
anyhow = "1.0"

[features]
default = ["filesystem-backend", "json-serialization"]
filesystem-backend = ["serde_json"]
json-serialization = ["serde_json"]
bincode-serialization = ["bincode"]
compression = ["flate2"]
openapi = ["utoipa"]
metrics = ["prometheus"]
tracing = ["dep:tracing"]
full = ["filesystem-backend", "json-serialization", "bincode-serialization", "compression", "openapi", "metrics", "tracing"]

[[example]]
name = "basic_usage"

[[example]]
name = "custom_entry"

[[example]]
name = "file_scanner_migration"