[package]
name = "threatflux-hashing"
version = "0.1.0"
edition = "2021"
authors = ["ThreatFlux"]
description = "High-performance async file hashing library supporting MD5, SHA256, SHA512, and BLAKE3"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ThreatFlux/threatflux-hashing"
keywords = ["hash", "crypto", "async", "md5", "sha256", "sha512", "blake3"]
categories = ["cryptography", "filesystem", "asynchronous"]
readme = "README.md"

[dependencies]
blake3 = "1.5"
md-5 = "0.10"
sha2 = "0.10"
tokio = { version = "1.47", features = ["rt", "macros", "fs", "sync"] }
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "2.0"
futures = "0.3"

[dev-dependencies]
tempfile = "3.8"
tokio = { version = "1.47", features = ["full"] }
criterion = { version = "0.7", features = ["html_reports"] }
hex = "0.4"
serde_json = "1.0"
pretty_assertions = "1.4"

[features]
default = ["serde"]
serde = ["dep:serde"]

[[bench]]
name = "hash_benchmarks"
harness = false