[package]
name = "threatflux-package-security"
version = "0.1.0"
edition = "2021"
authors = ["ThreatFlux"]
description = "Unified package security analysis framework for multiple package managers"
license = "MIT"
repository = "https://github.com/ThreatFlux/threatflux-package-security"
keywords = ["security", "vulnerability", "npm", "python", "java", "package-analysis"]
categories = ["development-tools", "security"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.40", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
once_cell = "1.20"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tracing = "0.1"
strsim = "0.11"
async-trait = "0.1"
thiserror = "2.0"

# Package-specific dependencies
zip = "4.3"  # For Java archives
tar = "0.4"  # For Python packages
flate2 = "1.0"  # For compressed archives
toml = "0.8"  # For parsing pyproject.toml
dirs = "5.0"  # For finding cache directories

# Optional features
dashmap = { version = "6.1", optional = true }
parking_lot = { version = "0.12", optional = true }

[features]
default = ["concurrent"]
concurrent = ["dashmap", "parking_lot"]
offline = []  # Disable online vulnerability database updates

[dev-dependencies]
tempfile = "3.15"
pretty_assertions = "1.4"
tokio-test = "0.4"
mockito = "1.6"