[package]
name = "threatflux-string-analysis"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
authors = ["ThreatFlux Team"]
description = "Advanced string analysis and categorization library for security applications"
license = "MIT"
repository = "https://github.com/ThreatFlux/threatflux-string-analysis"
keywords = ["security", "string-analysis", "threat-detection", "forensics", "malware"]
categories = ["security", "text-processing", "algorithms"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"

[dev-dependencies]
tempfile = "3.8"